--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -109,3 +109,20 @@ th,td{
 thead,tbody{
   border-collapse: collapse;
 }
+
+/*footer-----------------*/
+.footer{
+  margin-top: 30%;
+  height: 2rem;
+  color: white;
+  background: #000;
+}
+
+.title{
+  text-decoration: none;
+  color: #000;
+
+}
+.link-without-underline {
+  text-decoration: none;
+}
